<resources>
    <string name="app_name">BugCatcher</string>
    <string name="input_loginid">아이디를 입력하세요</string>
    <string name="input_loginPw">비밀번호를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="bugcatcher">바선생을 잡아줘</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="phone">휴대폰번호</string>
    <string name="email">이메일</string>


    <string name="success_login">로그인 성공</string>
    <string name="failed_login">아이디 또는 비밀번호가 올바르지 않습니다.</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>
    <string name="name">이름</string>
    <string name="birthday">생년월일</string>
    <string name="sex">성별</string>
    <string name="double_check">중복확인</string>
    <string name="id_check_success">사용할 수 있는 아이디입니다.</string>
    <string name="id_check_fail">이미 사용 중인 아이디입니다.</string>
    <string name="phone_check_success">사용할 수 있는 휴대폰 번호입니다.</string>
    <string name="phone_check_fail">이미 등록된 휴대폰 번호입니다.</string>
    <string name="apply_title">바선생 수배하기</string>
    <string name="apply_content">수배내용</string>
    <string name="apply_content_placeholder">바선생에 대한 특이사항</string>
    <string name="apply_reward_text">사례</string>
    <string name="apply_reward_placeholder">기프티콘, 현금 등에 관해 구체적으로 입력</string>
    <string name="apply_detail">바선생에 대한 구체적인 정보</string>
    <string name="bug_size">벌레 크기</string>
    <string name="big_size">대</string>
    <string name="middle_size">중</string>
    <string name="small_size">소</string>
    <string name="apply_submit">수배하기</string>
    <string name="title_activity_catcher_list">CatcherListActivity</string>
    <string-array name="rewards">
        <item>5천원 이내</item>
        <item>5천원-1만원</item>
        <item>1만원-1만5천원</item>
        <item>1만5천원-2만원</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_caller_list_detail">CallerListDetailActivity</string>

    <string name="nav_progress_title">진행 상태</string>
    <string name="nav_log_title">사용 내역 보기</string>
    <string name="nav_mypage_title">내 정보 수정</string>
    <string name="nav_setting_title">앱 설정</string>
    <string name="nav_logout_title">로그아웃</string>
    <string name="nav_switch_title">계속 잡아줄게  </string>

    <string name="fragment_main_text">메인 프래그먼트</string>
    <string name="fragment_log_text">사용 내역 프래그먼트</string>
    <string name="fragment_progress_text">진행 상황 프래그먼트</string>
    <string name="fragment_mypage_text">내 정보 프래그먼트</string>
    <string name="fragment_setting_text">앱 설정 프래그먼트</string>

    <string name="nav_header_name">황은하 님</string>
    <string name="nav_header_email">android.studio@android.com</string>

    <string name="map_activity_title">현재 위치</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
